--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install Pipenv
+        run: |
+          pip3 install pipenv
       - name: Clean Environment
         run: |
           make clean
