--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install Pipenv
         run: |
-          pip3 install pipenv
+          pip3 install pipenv wheel
       - name: Clean Environment
         run: |
           make clean
