--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,3 +28,10 @@ jobs:
       - name: Build and Test
         run: |
           make build
+      - name: Publish
+        run: |
+          make publish
+        if: github.ref == 'refs/heads/main'
+        env:
+          TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
