--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,3 +35,14 @@ jobs:
         env:
           TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+      - name: Version
+        id: version
+        uses: juliangruber/read-file-action@v1
+        if: ${{ github.ref == 'refs/heads/main' && matrix.python-version == '3.8' }}
+        with:
+          path: ./VERSION
+      - name: Tag
+        uses: rickstaa/action-create-tag@v1
+        if: ${{ github.ref == 'refs/heads/main' && matrix.python-version == '3.8' }}
+        with:
+          tag: "${{ steps.version.outputs.content }}"
