--- a/Pipfile
+++ b/Pipfile
@@ -28,8 +28,7 @@ GitPython = "*"
 pyyaml = "*"
 toml = "*"
 overrides = "*"
-# python 3.8 compatibility
-networkx = "~=3.1.0"
+networkx = "*"
 keyring = "*"
 "keyrings.cryptfile" = "*"
 
