--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v3
@@ -31,18 +31,18 @@ jobs:
       - name: Publish
         run: |
           make publish
-        if: ${{ github.ref == 'refs/heads/main' && matrix.python-version == '3.8' }}
+        if: ${{ github.ref == 'refs/heads/main' && matrix.python-version == '3.11' }}
         env:
           TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
       - name: Version
         id: version
         uses: juliangruber/read-file-action@v1
-        if: ${{ github.ref == 'refs/heads/main' && matrix.python-version == '3.8' }}
+        if: ${{ github.ref == 'refs/heads/main' && matrix.python-version == '3.11' }}
         with:
           path: ./VERSION
       - name: Tag
         uses: rickstaa/action-create-tag@v1
-        if: ${{ github.ref == 'refs/heads/main' && matrix.python-version == '3.8' }}
+        if: ${{ github.ref == 'refs/heads/main' && matrix.python-version == '3.11' }}
         with:
           tag: "${{ steps.version.outputs.content }}"
