YAML version freeze

--- a/Pipfile
+++ b/Pipfile
@@ -26,7 +26,7 @@ pydantic = "*"
 packaging = "*"
 argcomplete = "*"
 GitPython = "*"
-pyyaml = "*"
+pyyaml = "==5.3.1"
 toml = "*"
 overrides = "*"
 networkx = "*"
