Fix conan version

--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ blackduck = "*"
 ansible-lint = "*"
 docker = "*"
 boto3 = "*"
-conan = "*"
+conan = "<2"
 python-gnupg = "*"
 pytest = "*"
 yamllint = "*"
